name:                IndentationParser
version:             0.1.0.0
synopsis:            IndentationParser Project...
homepage:            http://github.com/sordina/IndentationParser
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable indentation_clean
  main-is:             Main.hs
  build-depends:       base -any, raw-strings-qq, containers, QuickCheck, split
  hs-source-dirs:      src
  default-language:    Haskell2010

executable indentation_prune
  main-is:             Prune.hs
  build-depends:       base -any, raw-strings-qq, containers, QuickCheck, split, regex-compat, lens
  hs-source-dirs:      src
  default-language:    Haskell2010
